[package]
name = "slint-diagram"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.3"
image = "0.24"

rfd = "0.14"
roxmltree = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[build-dependencies]
# This line allows build.rs to see the 'slint_build' crate
slint-build = "1.3.2"

